 - Make it possible to load more then one component tree and make this version depended
 - Simplify the code used for Ext.ux.grid.PropertyGrid.
 - Add more design elements which are available to Ext.ux.Designer.Components
 - Do test on designer problem
 - Select of element does not work in firefox on test screen.
 - Delete property throws error
 - xtype is not qouted when using fallback
 
 
 Change History:
 Version 2.1.0:
  + Added a new json parser therefor begin and end tags are no longer needed in code
  + Visual resize added activated by context menu
  + Visual move of element in absolute layout activated by context menu
  + Added XType fallback to panel for unknown xtypes
  + All xtypes which are loaded before guidesigner is load are now selectable
  + Found a good solotion for property grid error
  + Split single javascript files containing multiple classes into files
  + Added "scope.!<VAR>" in json object, so you can create local objects if they don't exist
  + Toolbox is forced to do a layout before showing.
  + Changed version of base ExtJs to 2.2 instead of 2.0, so it also works correlty on firefox 3.0
  * Fixed redrawElement problem causing a blank screen to be shown
  * Fixed problem in propertygrid that selectionboxes which where allowed to be customized could not be changed
  * Fixed refresh is now using redraw instead of reloading config
  * Fixed Before showing the preview window the designer is cleared, therefor no conflicts any more with same extjs ids
 
 Version 2.0.6:
  + Added PHPFile control thanks to Epsylon
  + index.php is added again to release, wraps index.html
  * Fixed problem with null values in json causing error message (layout wizards)
  * Fixed undo problem, changes made with grid could not be undone
  * Cleaned duplicated values from the propertyselection list
  * Drag element, pressing shift changes to clone mode
  * JsonInit is removed from redraw to increase performance